Fixes alignment of labels

--- a/usptostrap/less/_badges.less
+++ b/usptostrap/less/_badges.less
@@ -1,6 +1,4 @@
 @import "../../bower_components/bootstrap/less/badges";
 
 .badge {
-    padding-top: 2px;
-    padding-bottom: 3px;
 }
